<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/home_address_card_view"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="36dp"
        android:onClick="onHomeAddressClick"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="false"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/home_address_button_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/colorPrimary" />

            <ImageView
                android:id="@+id/home_image_view"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_home_black_24dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@id/home_image_view"
                android:textColor="@color/colorPrimary"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/do_not_disturb_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_not_disturb"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_toEndOf="@id/home_address_card_view"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="36dp" />

    <Switch
        android:id="@+id/home_address_simple_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:switchMinWidth="56dp"
        android:minWidth="56dp"
        android:layout_toEndOf="@id/home_address_card_view"
        android:layout_below="@id/do_not_disturb_text"
        android:hapticFeedbackEnabled="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/home_address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/home_address_card_view"
        android:textColor="@color/colorPrimary" />

    <androidx.cardview.widget.CardView
        android:id="@+id/office_address_card_view"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:onClick="onOfficeAddressClick"
        android:layout_below="@id/home_address_text"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="false">

        <RelativeLayout
            android:id="@+id/office_address_button_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/colorPrimary" />

            <ImageView
                android:id="@+id/office_image_view"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_work_black_24dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/office"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@id/office_image_view"
                android:textColor="@color/colorPrimary"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/do_not_disturb_text_office"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_not_disturb"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_below="@id/home_address_text"
        android:textColor="@color/colorPrimary"
        android:layout_toEndOf="@id/office_address_card_view"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="50dp" />

    <Switch
        android:id="@+id/office_address_simple_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:switchMinWidth="56dp"
        android:minWidth="56dp"
        android:layout_toEndOf="@id/office_address_card_view"
        android:layout_below="@id/do_not_disturb_text_office"
        android:hapticFeedbackEnabled="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/office_address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/office_address_card_view"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>